# agentic-bench

./: .env.example  .gitignore  AGENTS.md  README.md  index.html  pyproject.toml
.claude/skills/agentic-bench/: SKILL.md
.claude/skills/eval-reporter/: SKILL.md
.claude/skills/eval-reporter/assets/: report_template.html
.claude/skills/eval-reporter/references/: report-format.md
.claude/skills/eval-reporter/scripts/: generate_index.py  metrics_writer.py  report_generator.py
.claude/skills/gpu-runner/: SKILL.md
.claude/skills/gpu-runner/references/: beam-cloud.md  colab-chrome-mcp.md  hf-endpoints.md  inference-patterns.md  modal.md  runpod.md  vast.md
.claude/skills/model-researcher/: SKILL.md
.claude/skills/model-researcher/references/: eval-3d-gen.md  eval-audio.md  eval-code-gen.md  eval-embedding.md  eval-image.md  eval-llm.md  eval-object-detection.md  eval-stt.md  (+4 more)
.harmony/: config.json
docs/: architecture.md
research/: agent-skills-design.md  auto-eval-libraries.md  gpu-cloud-providers.md  hf-inference-options.md  model-types.md  runpod-deep-dive.md  similar-projects.md  vast-runpod.md
results/2026-02-21_glm-ocr/: metrics.json  report.html
results/2026-02-21_glm-ocr/artifacts/: benchmark_results.json
results/2026-02-21_glm-ocr/workspace/: run.py
results/2026-02-21_kani-tts-2-en/: metrics.json  raw_results.json  report.html
results/2026-02-21_kani-tts-2-en/workspace/: run.py
tests/: test_gpu_estimator.py  test_hf_inference_check.py  test_hf_model_info.py  test_hf_model_search.py  test_metrics_writer.py  test_report_generator.py
(+4 files in other folders)
