[project]
name = "agentic-bench"
version = "0.1.0"
description = "Agent-driven model validation and benchmarking framework"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.4.1",
    "python-dotenv>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py312"
line-length = 99
exclude = ["results/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
